--- a/index.html
+++ b/index.html
@@ -606,7 +606,10 @@
       </div>
     </section>
     <!-- ==== MASONRY SECTION ====-->
-    <section id="masonry-section" class="bg-darkbeige relative mx-auto max-w-[1536px]">
+    <section
+      id="masonry-section"
+      class="bg-darkbeige relative mx-auto min-h-[920px] max-w-[1536px] md:min-h-[1440px]"
+    >
       <div class="ml-10 pt-14 sm:ml-16 md:ml-32 md:pt-20 lg:ml-48 lg:pt-28 xl:ml-64">
         <h3 class="text-md text-forestgreen">Realizacje</h3>
         <h5 class="font-monts mb-10 mt-5 text-4xl font-medium md:mb-16 lg:mb-24 lg:text-5xl">
@@ -618,6 +621,7 @@
         id="projects-masonry"
         class="projects-masonry js-masonry mx-5 grid overflow-hidden transition-all duration-1000 md:mx-10"
       >
+        <div class="grid-sizer w-1/2 lg:w-1/3"></div>
         <div class="grid-item w-1/2 p-1 sm:p-2 md:p-4 lg:w-1/3 lg:p-5">
           <img
             src="public/images/project_0.png"
@@ -911,23 +915,26 @@
         </div>
       </div>
     </footer>
-    <script src="/images_loaded/imagesloaded.pkgd.js"></script>
-    <script src="/masonry/masonry.pkgd.js"></script>
+    <script src="/images_loaded/imagesloaded.pkgd.min.js"></script>
+    <script src="/masonry/masonry.pkgd.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.7.0.js"
       integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
       crossorigin="anonymous"
     ></script>
-    <script>
-      var $grid = $('.masonry-projects').masonry({
-      itemSelector: '.grid-item',
-      columnWidth: 200
-    });
-      // layout Masonry after each image loads
-      $grid.imagesLoaded().progress( function() {
-      $grid.masonry('layout');
-  });
-    </script>
+    <!-- <script>
+      var container = document.querySelector('.js-masonry')
+      var msnry = new Masonry(container, {
+        columnWidth: 200,
+        itemSelector: '.item',
+      })
+      msnry.imagesLoaded()(function () {
+        msnry.masonry()
+      })
+      imagesLoaded(document.querySelector('.js-masonry'), function (instance) {
+        console.log('all images are loaded')
+      })
+    </script> -->
     <script>
       let imageIndex = 1
       showImages(imageIndex)
@@ -936,7 +943,6 @@
       }
       function currentImage(n) {
         showImages((imageIndex = n))
-        console.log('show images', n)
         $('.gallery-overlay').toggleClass('hidden flex')
       }
       function closeGallery() {
@@ -1008,7 +1014,7 @@
           $('.offer').toggleClass('active')
           $('.dropdown-icon').toggleClass('active')
           $('.search').removeClass('active')
-          $('.search-input').removeeClass('scale-0')
+          $('.search-input').removeClass('scale-0')
         })
       })
     </script>
