--- a/index.html
+++ b/index.html
@@ -772,16 +772,16 @@
     </section>
     <!-- ==== IMAGE GALLERY ==== -->
     <div
-      class="gallery-overlay bg-almostblack fixed left-0 top-0 z-50 hidden h-full w-full items-center justify-center bg-opacity-70"
+      class="gallery-overlay bg-almostblack fixed left-0 top-0 z-50 hidden h-full w-full items-center justify-center bg-opacity-90"
     >
       <button
-        class="bg-almostblack absolute right-5 top-5 flex aspect-square items-center justify-center rounded-lg p-2 text-2xl text-white hover:bg-zinc-800 sm:p-3 sm:text-3xl lg:p-4 lg:text-4xl"
+        class="absolute right-5 top-5 flex aspect-square items-center justify-center rounded-lg bg-opacity-90 p-2 text-2xl text-zinc-300 hover:bg-zinc-800 hover:text-white sm:p-3 sm:text-3xl lg:p-4 lg:text-4xl"
         onclick="closeGallery()"
       >
         &#10006;
       </button>
       <button
-        class="pointer bg-almostblack block rounded-l-full p-2 pl-3 text-3xl font-bold text-white hover:bg-zinc-800 sm:p-8 sm:pr-3 sm:text-4xl lg:rounded-l-3xl lg:p-12 lg:pr-6"
+        class="pointer block rounded-l-full p-2 pl-3 text-3xl font-bold text-white hover:bg-zinc-700 sm:p-8 sm:pr-3 sm:text-4xl lg:rounded-l-3xl lg:p-12 lg:pr-6"
         onclick="plusImages(-1)"
       >
         &#10094;
@@ -841,7 +841,7 @@
         />
       </div>
       <button
-        class="pointer bg-almostblack block rounded-r-full p-2 pr-3 text-3xl font-bold text-white hover:bg-zinc-800 sm:p-8 sm:pl-3 sm:text-4xl lg:rounded-r-3xl lg:p-12 lg:pl-6"
+        class="pointer block rounded-r-full p-2 pr-3 text-3xl font-bold text-white hover:bg-zinc-700 sm:p-8 sm:pl-3 sm:text-4xl lg:rounded-r-3xl lg:p-12 lg:pl-6"
         onclick="plusImages(1)"
       >
         &#10095;
