--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <nav
         class="text-almostblack flex w-full max-w-[1536px] flex-col items-center justify-between sm:flex-row sm:px-4 md:px-6 md:py-2 lg:px-16"
       >
-        <div class="hover-underline underline-logo flex items-center">
+        <div class="hover-underline underline-logo ml-2 flex items-center">
           <a href="#">
             <img
-              class="mb-1 ml-2 scale-110 py-2 sm:mb-0 lg:scale-125"
+              class="mb-1 scale-110 py-2 sm:mb-0 lg:scale-125"
               src="public\images\giarddesign.svg"
               alt="Logo Strony"
           /></a>
