add scroll to top button

--- a/index.html
+++ b/index.html
@@ -937,6 +937,24 @@
         </div>
       </div>
     </footer>
+    <!-- ==== SCROLL TOP BUTTON ==== -->
+    <button
+      id="backToTop"
+      class="bg-forestgreen hover:bg-almostblack bottom-5 right-5 z-40 hidden cursor-pointer rounded-md border-2 border-solid border-zinc-300 p-3 text-white opacity-0 transition-all duration-300 md:fixed md:block"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 20 20"
+        fill="currentColor"
+        class="h-7 w-7"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z"
+          clip-rule="evenodd"
+        />
+      </svg>
+    </button>
     <script
       src="https://code.jquery.com/jquery-3.7.0.js"
       integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
@@ -948,5 +966,6 @@
     <script src="/scripts/slider.js"></script>
     <script src="/scripts/masonry.js"></script>
     <script src="/scripts/gallery.js"></script>
+    <script src="/scripts/scrolltop.js"></script>
   </body>
 </html>
