fix open gallery onclick padding

--- a/index.html
+++ b/index.html
@@ -626,103 +626,63 @@
       >
         <div
           class="grid-item cursor-pointer overflow-hidden p-2 transition-all hover:scale-105 sm:p-3 md:p-4"
+          onClick="currentImage(1)"
         >
-          <img
-            src="public/images/project_0.png"
-            alt="project photo"
-            class="h-auto w-full"
-            onClick="currentImage(1)"
-          />
+          <img src="public/images/project_0.png" alt="project photo" class="h-auto w-full" />
         </div>
         <div
           class="grid-item cursor-pointer overflow-hidden p-2 transition-all hover:scale-105 sm:p-3 md:p-4"
+          onClick="currentImage(2)"
         >
-          <img
-            src="public/images/project_1.png"
-            alt="project photo"
-            class="h-auto w-full"
-            onClick="currentImage(2)"
-          />
+          <img src="public/images/project_1.png" alt="project photo" class="h-auto w-full" />
         </div>
         <div
           class="grid-item cursor-pointer overflow-hidden p-2 transition-all hover:scale-105 sm:p-3 md:p-4"
+          onClick="currentImage(3)"
         >
-          <img
-            src="public/images/project_2.png"
-            alt="project photo"
-            class="h-auto w-full"
-            onClick="currentImage(3)"
-          />
+          <img src="public/images/project_2.png" alt="project photo" class="h-auto w-full" />
         </div>
         <div
           class="grid-item cursor-pointer overflow-hidden p-2 transition-all hover:scale-105 sm:p-3 md:p-4"
+          onClick="currentImage(4)"
         >
-          <img
-            src="public/images/project_3.png"
-            alt="project photo"
-            class="h-auto w-full"
-            onClick="currentImage(4)"
-          />
+          <img src="public/images/project_3.png" alt="project photo" class="h-auto w-full" />
         </div>
         <div
           class="grid-item cursor-pointer overflow-hidden p-2 transition-all hover:scale-105 sm:p-3 md:p-4"
+          onClick="currentImage(5)"
         >
-          <img
-            src="public/images/project_4.png"
-            alt="project photo"
-            class="h-auto w-full"
-            onClick="currentImage(5)"
-          />
+          <img src="public/images/project_4.png" alt="project photo" class="h-auto w-full" />
         </div>
         <div
           class="grid-item cursor-pointer overflow-hidden p-2 transition-all hover:scale-105 sm:p-3 md:p-4"
+          onClick="currentImage(6)"
         >
-          <img
-            src="public/images/project_5.png"
-            alt="project photo"
-            class="h-auto w-full"
-            onClick="currentImage(6)"
-          />
+          <img src="public/images/project_5.png" alt="project photo" class="h-auto w-full" />
         </div>
         <div
           class="grid-item cursor-pointer overflow-hidden p-2 transition-all hover:scale-105 sm:p-3 md:p-4"
+          onClick="currentImage(7)"
         >
-          <img
-            src="public/images/project_6.png"
-            alt="project photo"
-            class="h-auto w-full"
-            onClick="currentImage(7)"
-          />
+          <img src="public/images/project_6.png" alt="project photo" class="h-auto w-full" />
         </div>
         <div
           class="grid-item cursor-pointer overflow-hidden p-2 transition-all hover:scale-105 sm:p-3 md:p-4"
+          onClick="currentImage(8)"
         >
-          <img
-            src="public/images/project_7.png"
-            alt="project photo"
-            class="h-auto w-full"
-            onClick="currentImage(8)"
-          />
+          <img src="public/images/project_7.png" alt="project photo" class="h-auto w-full" />
         </div>
         <div
           class="grid-item cursor-pointer overflow-hidden p-2 transition-all hover:scale-105 sm:p-3 md:p-4"
+          onClick="currentImage(9)"
         >
-          <img
-            src="public/images/project_8.png"
-            alt="project photo"
-            class="h-auto w-full"
-            onClick="currentImage(9)"
-          />
+          <img src="public/images/project_8.png" alt="project photo" class="h-auto w-full" />
         </div>
         <div
           class="grid-item cursor-pointer overflow-hidden p-2 transition-all hover:scale-105 sm:p-3 md:p-4"
+          onClick="currentImage(10)"
         >
-          <img
-            src="public/images/project_9.png"
-            alt="project photo"
-            class="h-auto w-full"
-            onClick="currentImage(10)"
-          />
+          <img src="public/images/project_9.png" alt="project photo" class="h-auto w-full" />
         </div>
       </div>
       <div class="flex items-center justify-center pb-6 pt-6 md:pb-8 lg:h-40 lg:pb-16">
