--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>giard ‖ design</title>
     <meta name="description" content="Landing Page for Giard Design" />
     <meta name="author" content="Piotr Jakub Dębski" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
